--- a/src/components/ContactForm/contactform.module.css
+++ b/src/components/ContactForm/contactform.module.css
@@ -1,8 +1,8 @@
-.form {
+.inputPhone {
   display: flex;
   max-width: 240px;
   flex-direction: column;
-  gap: 5px;
+  gap: 15px;
 }
 
 .contactsformtBtn {
