--- a/src/components/ContactList/contactList.module.css
+++ b/src/components/ContactList/contactList.module.css
@@ -7,7 +7,7 @@
 }
 .contactslistBtn:hover + .contactslistItem,
 .contactslistBtn:focus + .contactslistItem {
-  font-weight: bold;
+  font-weight: bold; /* Устанавливаем жирный шрифт для .contactslistItem при наведении или фокусировке на .contactslistBtn */
 }
 
 .contactList {
