--- a/src/components/ContactForm/contactform.module.css
+++ b/src/components/ContactForm/contactform.module.css
@@ -1,11 +1,27 @@
-.inputPhone {
+.inputPhoneBox {
+  text-align: center;
+  background-color: rgb(205, 243, 255);
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
   display: flex;
   max-width: 240px;
+  flex-direction: column;
+  gap: 15px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.inputForm {
+  display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
 .contactsformtBtn {
+  padding: 10px;
+  margin-top: 15px;
   border-radius: 3px;
   background-color: aliceblue;
   transition: background-color 0.3s;
