--- a/src/components/ContactForm/contactform.module.css
+++ b/src/components/ContactForm/contactform.module.css
@@ -1,18 +1,22 @@
-.inputPhoneBox {
+.inputBox {
+  margin-top: 20px;
   text-align: center;
   background-color: rgb(205, 243, 255);
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
   display: flex;
-  max-width: 240px;
+  max-width: 280px;
   flex-direction: column;
   gap: 15px;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
+.title {
+  font-size: 32px;
+  margin: 0;
+}
+
 .inputForm {
   display: flex;
   flex-direction: column;
@@ -23,11 +27,12 @@
   padding: 10px;
   margin-top: 15px;
   border-radius: 3px;
-  background-color: aliceblue;
+  background-color: rgb(218, 250, 239);
   transition: background-color 0.3s;
 }
 
 .contactsformtBtn:hover,
 .contactsformtBtn:focus {
-  background-color: rgb(252, 202, 205);
+  background-color: rgb(176, 245, 221);
+  font-weight: bold;
 }
