--- a/src/components/ContactList/contactList.module.css
+++ b/src/components/ContactList/contactList.module.css
@@ -24,9 +24,11 @@
   row-gap: 10px;
   padding: 0;
   margin: 0;
+  color: rgb(132, 248, 210);
 }
 
 .contactslistItem {
+  color: black;
   padding-top: 5px;
   list-style: none;
   display: flex;
